--- a/NLP_BiLSTM_colab.ipynb
+++ b/NLP_BiLSTM_colab.ipynb
@@ -17,12 +17,12 @@
     {
       "source": [
         "# LSTM Model for Text Classification\n",
-        "Train the previous lstm model are one million headlines news across five thousand stocks     \n",
+        "Train the previous LSTM model with one million headlines news across five thousand stocks     \n",
         "Headlines are the features and stock's preformance are labels  \n",
-        "Using binary labels instead of catergorical labels, 0 for negative and 1 for positive preformance of daily closing prices\n",
+        "Using binary labels instead of categorical labels, 0 for negative and 1 for positive preformance of daily closing prices\n",
         "\n",
         "## Training on the cloud\n",
-        "Model was trained on the cloud using google's colab, as personal system kept crashing in long training session"
+        "Model was trained on the cloud using Google's colab, as personal system kept crashing in long training session"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -48,9 +48,9 @@
     },
     {
       "source": [
-        "Upload data to colab\n",
+        "Upload data to Colab\n",
         "\n",
-        "Data from kaggle 'https://www.kaggle.com/miguelaenlle/massive-stock-news-analysis-db-for-nlpbacktests?select=analyst_ratings_processed.csv' which was processed\n",
+        "Data from Kaggle 'https://www.kaggle.com/miguelaenlle/massive-stock-news-analysis-db-for-nlpbacktests?select=analyst_ratings_processed.csv' which was processed\n",
         " \n"
       ],
       "cell_type": "markdown",
@@ -191,7 +191,7 @@
     },
     {
       "source": [
-        "Train on 50 epochs, roughly 8 minutes per epoch  \n",
+        "Train 50 epochs, roughly 8 minutes per epoch  \n",
         "Save best model, using checkpoints callback"
       ],
       "cell_type": "markdown",
@@ -424,7 +424,7 @@
     },
     {
       "source": [
-        "# Visualizing Training\n",
+        "# Visualising Training\n",
         "\n",
         "Training accuracy peaked at 40 epochs while loss was creeping up after 40 epochs"
       ],
@@ -489,11 +489,11 @@
         "\n",
         "With the risk and money management, 60% accuracy could lead to profitable trades over long periods\n",
         "## Next step\n",
-        "Training on bigger model, example \"BERT\" (Limited with current setup, 1 epoch of training on BERT takes 24 hour while google colab hard timeout at 12 hours)\n",
+        "Training on bigger model, example \"BERT\" (limited with current setup, 1 epoch of training on BERT takes 24 hour while Google colab hard timeout at 12 hours)\n",
         "\n",
         "**Deploying model**\n",
-        "* scrape current headlines news to feed into model for predictions\n",
-        "* Add risk and money management feature"
+        "* Scrape current headlines news to feed into model for predictions\n",
+        "* Add risk and money management features"
       ],
       "cell_type": "markdown",
       "metadata": {}
