Rename files and fix typos

--- a/BERT.ipynb
+++ b/BERT.ipynb
@@ -28,12 +28,11 @@
  "cells": [
   {
    "source": [
-    "# Fine tune BERT language model for sentiment analysis\n",
+    "# Fine-tune BERT Language Model for Sentiment Analysis\n",
     "## BERT\n",
-    "BERT (Bidirectional Encoder Representations from Transformers) is pre-trained language model, trained on 800M words and has 110M parameters  \n",
-    "Using a larger model to improve the accuracy of sentiment analysis task, which was under 40% from LSTM model trained from scratch\n",
+    "BERT (Bidirectional Encoder Representations from Transformers) is a pre-trained language model, trained on 800 million words and has 110 million parameters  \n",
     "\n",
-    "Fine tune the input and output layers to take in headlines news and classify them into negative, natural or positive"
+    "Fine-tune the input and output layers to take in headline news and classify them into negative, natural or positive"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -70,7 +69,7 @@
   },
   {
    "source": [
-    "Load data, data from 'data_processor_catergoical.py'"
+    "Load data, data from 'data_processor_categorical.py'"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -81,12 +80,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('cleaned_FB_catergorical.csv')"
+    "df = pd.read_csv('cleaned_FB_categorical.csv')"
    ]
   },
   {
    "source": [
-    "Split data int training and testing"
+    "Split data into training and testing"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -106,7 +105,7 @@
   },
   {
    "source": [
-    "Adapted github user's adam0ling - twiter_sentiment \"https://github.com/adam0ling/twitter_sentiment/blob/main/3_BERT.ipynb\" and updated to version 3 of BERT multi cased\n",
+    "Adapted github user's adam0ling - twiter_sentiment \"https://github.com/adam0ling/twitter_sentiment/blob/main/3_BERT.ipynb\" and updated to version 3 of BERT multi-cased\n",
     "\n",
     "Label Encoding"
    ],
@@ -131,7 +130,7 @@
   },
   {
    "source": [
-    "Download Bert layers"
+    "Download BERT layers"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -291,7 +290,7 @@
   },
   {
    "source": [
-    "Fine tune model"
+    "Fine-tune model"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -408,17 +407,17 @@
    "source": [
     "# Conclusion\n",
     "BERT model outperformed LSTM model that was trained from scratch  \n",
-    "BERT's validation accuracy is 53% compared to LSTM validation accruacy of 40%\n",
+    "BERT's validation accuracy is 53% compared to LSTM validation accuracy of 40%\n",
     "\n",
-    "## Lack of training data\n",
-    "Althought there were only 2,000 training samples, a larger data set could increase the accuracy at the cost of higher training time  \n",
-    "Model was able to learn to classify better than random guessing, having a slight edge could be using in developing a strategy\n",
+    "## Lack of Training Data\n",
+    "Although there were only 2,000 training samples, a larger data set could increase the accuracy at the cost of higher training time  \n",
+    "Model was able to learn to classify better than random guessing, even a slight edge could be useful in developing a strategy\n",
     "\n",
-    "## To-do:\n",
+    "## To-Do List:\n",
     "* Collect more data, instead of collecting headline news of a specific stock  \n",
     "Collect data of the entire market and train it on an index eg. S&P 500  \n",
-    "* Impelement a mid-low frequency trading strategy  \n",
-    "Softmax activation funcation gives the probability of the output, probability could be used for risk management\n"
+    "* Implement a mid-low frequency trading strategy  \n",
+    "Softmax activation function gives the probability of the output, probability could be used for risk management\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
