--- a/NLP_BiLSTM_colab.ipynb
+++ b/NLP_BiLSTM_colab.ipynb
@@ -17,12 +17,12 @@
     {
       "source": [
         "# LSTM Model for Text Classification\n",
-        "Train the previous LSTM model with one million headlines news across five thousand stocks     \n",
-        "Headlines are the features and stock's preformance are labels  \n",
-        "Using binary labels instead of categorical labels, 0 for negative and 1 for positive preformance of daily closing prices\n",
+        "Train the previous LSTM model with 1 million headlines news across 5,000 stocks     \n",
+        "Headlines are the features and stocks' performance are labels  \n",
+        "Use binary labels instead of categorical labels, 0 for negative and 1 for positive performance of daily closing prices\n",
         "\n",
         "## Training on the cloud\n",
-        "Model was trained on the cloud using Google's colab, as personal system kept crashing in long training session"
+        "Model was trained on the cloud using Google's Colab"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -392,7 +392,7 @@
     },
     {
       "source": [
-        "Model's accuracy is 60% when testing on unseen data"
+        "Model's accuracy was 60% when tested on unseen data"
       ],
       "cell_type": "markdown",
       "metadata": {}
@@ -484,12 +484,12 @@
     {
       "source": [
         "# Conclusion\n",
-        "Training with more data, the same model was able to learn and make better predictions compared to using the limited data from scraping news outlet  \n",
+        "Training with more data, the same model was able to learn and make better predictions compared to using the limited data from scraping news outlets  \n",
         "Model was able to learn from headline news across 5,000 stocks, increasing its usefulness\n",
         "\n",
-        "With the risk and money management, 60% accuracy could lead to profitable trades over long periods\n",
+        "With proper risk and money management, 60% accuracy could lead to profitable trades over long periods\n",
         "## Next step\n",
-        "Training on bigger model, example \"BERT\" (limited with current setup, 1 epoch of training on BERT takes 24 hour while Google colab hard timeout at 12 hours)\n",
+        "Training on bigger model, example \"BERT\" (limited by current setup, 1 epoch of training on BERT takes 24 hours while Google Colab hard timeout at 12 hours)\n",
         "\n",
         "**Deploying model**\n",
         "* Scrape current headlines news to feed into model for predictions\n",
